# SlimeNRF-Tracker

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE-APACHE  LICENSE-MIT  README.md  README.rst  VERSION  prj.conf  sample.yaml
boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  xiao_ble.conf  xiao_ble.overlay  xiao_ble_nrf52840_sense.conf  xiao_ble_nrf52840_sense.overlay
boards/arm/sctanf_slimenrf/: Kconfig.board  Kconfig.defconfig  sctanf_slimenrf.dts  sctanf_slimenrf.yaml  sctanf_slimenrf_defconfig
src/: ICM42688.c  ICM42688.h  MMC5983MA.c  MMC5983MA.h  battery.c  battery.h  build_defines.h  connection.c  connection.h  console.c  esb.c  esb.h  fusion.c  fusion.h  globals.c  globals.h  magneto1_4.c  magneto1_4.h  main.c  mymathlib_matrix.c  mymathlib_matrix.h  retained.c  retained.h  sensor.c  sensor.h  sys.c  sys.h  system.c  system.h  timer.c  timer.h  util.c  util.h  vqf.c  vqf.h
src/Fusion/: FusionOffset.c  FusionOffset2.c  FusionOffset2.h
src/magneto/: magneto1_4.c  magneto1_4.h  mymathlib_matrix.c  mymathlib_matrix.h
src/sensor/: BMI270.c  BMI270.h  BMI270_firmware.h  BMM150.c  BMM150.h  BMM350.c  BMM350.h  ICM42688.c  ICM42688.h  LIS2MDL.c  LIS2MDL.h  LIS3MDL.c  LIS3MDL.h  LSM6DSO.c  LSM6DSO.h  LSM6DSV.c  LSM6DSV.h  MMC5983MA.c  MMC5983MA.h  fusions.h  scan.c  scan.h  sensor_ext.c  sensor_ext.h  sensor_none.c  sensor_none.h  sensors.h  sensors_enum.h
src/system/: battery.c  led.c  led.h  power.c  power.h  status.c  status.h
stuf/: ICM42688_MMC5983MA_LPS22HB_9DoF_Ladybug.ino  spi-icm42688.c  spi-icm42688_common.c
(+138 files in other folders)
